register service and outbox pattern

--- a/resources/config.yaml
+++ b/resources/config.yaml
@@ -9,3 +9,8 @@ local:
     appkeys: ["HeaderAppKey1","HeaderAppKey2"]
   jwt:
     secret: "blablablafalanfilanintermilan**_?4406"
+  smtp:
+    host: "smtp.gmail.com"
+    email: "kaldi.erol@gmail.com"
+    password: "zfehjhewiapbgkij"
+
